# yggdrasil

./: .dockerignore  .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  Dockerfile  README.md  TODO-ISSUES.md  compose.yaml  rust-toolchain.toml
.depot/workflows/: ci.yml  release.yml
.github/workflows/: ci.yml  release.yml
crates/yg-api/: Cargo.toml
crates/yg-api/src/: admin.rs  auth.rs  config.rs  error.rs  health.rs  lib.rs  mcp.rs  mcp_protocol.rs  metrics.rs  rate_limit.rs  request_timeout.rs  search.rs  search_limit.rs  verbs.rs  wire.rs
crates/yg-cli/: Cargo.toml
crates/yg-cli/skills/yggdrasil-navigation/: SKILL.md
crates/yg-cli/src/: client_config.rs  deploy_config.rs  exit_code.rs  http_client.rs  main.rs  output.rs  skill.rs
crates/yg-cli/tests/: api_protection.rs  auth.rs  cli_ux.rs  config_check.rs  control_poll_recovery.rs  discovery_reconciliation.rs  e2e.rs  forge_budgeting.rs  forge_classification.rs  fuzzy_ids.rs  gc.rs  history.rs  hub_fanout.rs  indexing.rs  mcp.rs  mcp_errors.rs  metrics.rs  orientation_efficiency.rs  polling.rs  queue_hygiene.rs  schema_search.rs  search.rs  shutdown.rs  skill.rs  verbs.rs  wire.rs
crates/yg-cli/tests/common/: mod.rs
crates/yg-control/: Cargo.toml
crates/yg-control/migrations/: 0001_create_repos.sql  0002_sync_tracer.sql  0003_shards.sql  0004_backfill_index_jobs.sql  0005_drop_indexed_flag.sql  0006_repo_qualifier.sql  0007_poll_scheduling.sql  0008_shard_superseded_at.sql  0009_forge_discovery.sql  0010_member_tokens.sql  0011_job_queue_hygiene.sql  0012_forge_api_root.sql  0013_shard_reclaiming.sql  0014_repo_registration_base_url.sql  0015_discovery_qualifier_conflicts.sql  0016_forge_rate_budgets.sql  0017_member_token_expiry.sql  0018_repo_poll_validators.sql
crates/yg-control/src/: lib.rs  metrics.rs
crates/yg-index/: Cargo.toml
crates/yg-index/src/: commit.rs  gc.rs  history.rs  lib.rs  pass.rs  reconcile.rs  resolve.rs  worker.rs
crates/yg-index/src/pass/: ecmascript.rs  go.rs  java.rs  mod.rs  python.rs  rust.rs  tests.rs
crates/yg-index/tests/: heuristic_edges.rs  history.rs  syntactic_pass.rs
crates/yg-providers/: Cargo.toml
crates/yg-providers/src/: lib.rs
crates/yg-shard/: Cargo.toml
crates/yg-shard/src/: cache.rs  fts.rs  graph_schema.rs  lib.rs  metrics.rs
crates/yg-shard/tests/: cache.rs  cache_bounded.rs  fts.rs
crates/yg-sync/: Cargo.toml
crates/yg-sync/src/: forge.rs  git.rs  lease.rs  lib.rs  locator.rs  metrics.rs  rate.rs  shutdown.rs  worker.rs
crates/yg-sync/src/forge/: git_generic.rs  github.rs
crates/yg-sync/testdata/: localized-git-stderr.sh
crates/yg-sync/tests/: forge_classification.rs
crates/yg-verbs/: Cargo.toml
crates/yg-verbs/src/: admin.rs  cursor.rs  engine.rs  fuzzy.rs  lib.rs  metrics.rs  search.rs  status.rs
crates/yg-verbs/src/search/: fanout.rs  hydrate.rs  merge.rs  mod.rs  types.rs
crates/yg-verbs/tests/: wire_dtos.rs
docs/: ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  EVAL.md  PRD.md
docs/adr/: 0001-org-visible-access-model.md  0002-precise-indexing-with-syntactic-fallback.md  0003-verb-contract-not-query-language.md  0004-embedded-sqlite-storage.md  0005-object-storage-native-shards.md  0006-syntactic-ambiguity-spread-confidence.md
docs/rfc/: 0001-yggdrasil-v1.md
docs/superpowers/plans/: 2026-07-10-depot-ci-release-builds.md
docs/superpowers/specs/: 2026-07-10-depot-ci-release-builds-design.md
scripts/: deployment-smoke.sh
skills/yggdrasil-navigation/: SKILL.md
