[package]
name = "yg-api"
description = "REST + MCP server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
object_store = { version = "0.13.2", features = ["aws"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
subtle = "2.6.1"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "signal", "net", "time"] }
tracing = "0.1.44"
yg-control = { version = "0.1.0", path = "../yg-control" }
yg-shard = { version = "0.1.0", path = "../yg-shard" }
yg-sync = { version = "0.1.0", path = "../yg-sync" }
