[package]
name = "yg-cli"
description = "yg binary: subcommands, serve roles, MCP proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "yg"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "json"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "signal", "sync"] }
tracing-subscriber = "0.3.23"
yg-api = { version = "0.1.0", path = "../yg-api" }
yg-control = { version = "0.1.0", path = "../yg-control" }
yg-sync = { version = "0.1.0", path = "../yg-sync" }

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"
sqlx = { version = "0.9.0", default-features = false, features = ["postgres", "runtime-tokio"] }
tempfile = "3.24.0"
yg-index = { path = "../yg-index" }
