[package]
name = "yg-cli"
description = "yg binary: subcommands, serve roles, MCP proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "yg"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.17"
toml = "0.9.8"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "signal", "sync", "time"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
yg-api = { version = "0.1.0", path = "../yg-api" }
yg-control = { version = "0.1.0", path = "../yg-control" }
yg-index = { version = "0.1.0", path = "../yg-index" }
yg-sync = { version = "0.1.0", path = "../yg-sync" }
yg-verbs = { version = "0.1.0", path = "../yg-verbs" }

[dev-dependencies]
assert_cmd = "2.2.2"
base64 = "0.22.1"
hex = "0.4.3"
object_store = "0.13.2"
predicates = "3.1.4"
rusqlite = "0.39"
sha2 = "0.11.0"
sqlx = { version = "0.9.0", default-features = false, features = ["postgres", "runtime-tokio"] }
tempfile = "3.24.0"
yg-shard = { path = "../yg-shard" }
