[package]
name = "yg-control"
description = "Postgres models, job queue"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0.102"
getrandom = "0.3.4"
prometheus-client.workspace = true
sha2 = "0.11.0"
sqlx = { version = "0.9.0", default-features = false, features = ["postgres", "runtime-tokio", "migrate", "macros"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
