[package]
name = "yg-index"
description = "Tree-sitter pass, SCIP ingestion, extractors, sandbox driver"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0.102"
object_store = "0.13.2"
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "process", "fs", "io-util"] }
tracing = "0.1.44"
tree-sitter = "0.26.9"
tree-sitter-go = "0.25.0"
yg-control = { version = "0.1.0", path = "../yg-control" }
yg-shard = { version = "0.1.0", path = "../yg-shard" }
