[package]
name = "yg-index"
description = "Tree-sitter pass, SCIP ingestion, extractors, sandbox driver"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0.102"
object_store = "0.13.2"
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = ["rt", "process", "time"] }
tracing = "0.1.44"
tree-sitter = "0.26.9"
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = "0.23.2"
yg-control = { version = "0.1.0", path = "../yg-control" }
yg-shard = { version = "0.1.0", path = "../yg-shard" }
yg-sync = { version = "0.1.0", path = "../yg-sync" }

[dev-dependencies]
# `#[tokio::test]` for the async history-extraction tests.
tokio = { version = "1.52.3", features = ["macros", "rt"] }
