[package]
name = "yg-shard"
description = "Shard read/write, cache tier, formats"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0.102"
hex = "0.4.3"
object_store = { version = "0.13.2", features = ["aws"] }
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = ["rt", "sync", "fs"] }

[dev-dependencies]
async-trait = "0.1.89"
futures = "0.3.31"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
