[package]
name = "yg-verbs"
description = "Verb engine (pure: control-plane + shard reads)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0.102"
rusqlite = { version = "0.39", features = ["bundled"] }
schemars = { version = "1.0.4", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
